IFS-7072 fixing align.

--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_forms.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_forms.scss
@@ -205,6 +205,8 @@ tr {
   &.form-group-row-validated {
     &.govuk-form-group--error {
       td {
+        vertical-align: bottom;
+
         &:first-of-type {
           border-left: 5px solid $govuk-error-colour;
           padding-left: 15px;
